--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Group 9</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>group 9  members</h1>
@@ -15,5 +16,7 @@
         <li>nathnael chilot</li>
         <li>kiya zewdu</li>
     </ul>
+    <button><a href="https://github.com/Group-9-software-engineers">Find Us</a></button>
+    
 </body>
 </html>
