modifing the js file

--- a/404.html
+++ b/404.html
@@ -11,7 +11,8 @@
     <div class="page-error">
     <h1>404</h1>
     <h2>Page Not Found</h2>
-    <button><a href="https://github.com/Group-9-software-engineers">Find Us</a></button>
+    <button><a href="https://github.com/Group-9-software-engineers">Find Us</a></button> 
+    <p id="notify"></p>
 </div>
 </body>
 </html>
