--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <li>nathnael chilot</li>
         <li>kiya zewdu</li>
     </ul>
-    <button><a href="https://github.com/Group-9-software-engineers">Find Us</a></button>
-    
+    <button id="btn"><a target="_blank" href="https://github.com/Group-9-software-engineers">Find Us</a></button>
+    <p id="notify"></p>
+    <script src="main.js"></script>
 </body>
 </html>
